# woat-triangle-problem

./: .gitignore  CMakeLists.txt  README.md
doc/: equivalence-classes-ru.ods  product-requirements-ru.odt  product-requirements-ru.txt
help/: help.html  style.css
src/: AnalyzeTriangleSidesEvent.cpp  AnalyzeTriangleSidesEvent.h  Main.cpp  MessageProvider.cpp  MessageProvider.h  PositiveDoubleValidator.cpp  PositiveDoubleValidator.h  Triangle.cpp  Triangle.h  TriangleProblemApp.cpp  TriangleProblemApp.h  TriangleProblemFrame.cpp  TriangleProblemFrame.h  UnsignedLongLongValidator.cpp  UnsignedLongLongValidator.h
test/: CMakeLists.txt  test.cpp
